@@ -52,6 +52,7 @@ public:
     void SetLumi(const float lumi);
     void SetFitType(FitType type);
     void SetLimitType( LimitType type );
+    std::string CheckName( const std::string &name );
     void SetFitRegion(FitRegion region);
     
     Sample* NewSample(string name,int type=0);
